crates/pgls_pretty_print/tests/snapshots/single/tests__create_stmt_0_60.snap
---
source: crates/pgls_pretty_print/tests/tests.rs
input_file: crates/pgls_pretty_print/tests/data/single/create_stmt_0.sql
snapshot_kind: text
---
CREATE TABLE users (id TEXT, name TEXT);
