crates/pgls_pretty_print/tests/snapshots/single/tests__create_subscription_stmt_0_80.snap
---
source: crates/pgls_pretty_print/tests/tests.rs
input_file: crates/pgls_pretty_print/tests/data/single/create_subscription_stmt_0.sql
snapshot_kind: text
---
CREATE SUBSCRIPTION mysub CONNECTION 'host=localhost dbname=postgres' PUBLICATION mypub;
