crates/pgls_pretty_print/tests/snapshots/single/tests__create_table_as_stmt_0_60.snap
---
source: crates/pgt_pretty_print/tests/tests.rs
input_file: crates/pgt_pretty_print/tests/data/single/create_table_as_stmt_0_60.sql
snapshot_kind: text
---
CREATE TABLE foo AS SELECT 1;
